# nonebot2-with-webui

./: README.md  main.py  pyproject.toml  requirements.txt  start.py
config/: bot_config.json
core/: application.py  data_collector.py  database.py  nonebot_manager.py  plugin_interceptor.py  security.py
modules/: __init__.py
modules/auth/: models.py  routes.py  service.py
modules/group/: models.py  routes.py  service.py
modules/log/: models.py  routes.py  service.py
modules/plugin/: models.py  routes.py  service.py
modules/system/: models.py  routes.py  service.py
modules/user/: models.py  routes.py  service.py
plugins/echo/: __init__.py
theme/static/css/: style.css
theme/static/js/: dashboard.js  groups.js  logs.js  main.js  plugins.js  system.js  users.js
utils/: helpers.py  logger.py
web/: routes.py  server.py
web/templates/: base.html  dashboard.html  groups.html  login.html  logs.html  plugins.html  system.html  users.html
